syntax = "proto3";
option java_multiple_files = true;
package com.prodocut.grpc;

service DiscountService {
  rpc getDiscount(DiscountRequest) returns (DiscountResponse);
  rpc AddDiscountToProduct (AddDiscountRequest) returns (Response);

}

message DiscountRequest {
  string code = 1;
  float price = 2;
  string name = 4;
  int64 externalCategoryId = 5;
}
message AddDiscountRequest {
  string code = 1;
  float price = 2;
  int32 stock = 3; //emin değiğilim
  string name = 4;
  int64 externalCategoryId = 5;
}

message DiscountResponse {
  string code = 1;
  float newPrice = 2;
  float oldPrice = 3;
  Response response = 4;
}

message Response {
  bool statusCode = 1;
  string message = 2;
}